--- a/index.haml
+++ b/index.haml
@@ -16,7 +16,7 @@
     * Instructor: David Rogers (@al-the-x)
     * Phone: 407-582-2340 (Arts & Ent Dept)
     * Email: drogers28@mail.valenciacollege.edu
-    * URL: https://vcc-dig1108-fall2012.github.com
+    * URL: [https://vcc-dig1108.github.com](https://vcc-dig1108.github.com)
 
     ### Text and Required Supplies
 
