Changing the text for the course.

--- a/index.haml
+++ b/index.haml
@@ -20,9 +20,9 @@
 
     ### Text and Required Supplies
 
-    * [Head First PHP & MySQL](http://shop.oreilly.com/product/9780596006303.do?CMP=ILC-hf1st) ([site](http://www.headfirstlabs.com/books/hfphp/))
-      * Print ISBN13: 978-0-596-00630-3 / ISBN10: 0-596-00630-6
-      * Ebook ISBN13: 978-0-596-55644-0 / ISBN10: 0-596-55644-6
+    * [PHP: The Good Parts](http://shop.oreilly.com/product/9780596804381.do)
+        * Print ISBN13: 978-0-596-80437-4 / ISBN10: 0-596-80437-7
+        * Ebook ISBN13: 978-1-4493-8828-7 / ISBN10: 1-4493-8828-0
     * [Free Github Account](https://github.com/signup)
     * [Free Cloud9 IDE Account](https://c9.io/signup)
 
