--- a/index.haml
+++ b/index.haml
@@ -108,7 +108,7 @@
 
     ## Course Schedule
 
-    * **Week 1:** Introduction to the Class, Syllabus, and Text
+    * **Week 1:** [Intro to the Intro](http://goo.gl/j7gFK)
     * **Weeks 2-6:** Primitives, Literals, Variables, Operators, Control Structures, Functions
     * **Weeks 7-8:** Basic Object-Oriented Programming
     * **Weeks 9:** Welcome to the Coding Dojo!
