--- a/index.haml
+++ b/index.haml
@@ -108,8 +108,9 @@
 
     ## Course Schedule
 
-    * **Week 1:** [Intro to the Intro](http://goo.gl/gJkFv)
-    * **Weeks 2-6:** Primitives, Literals, Variables, Operators, Control Structures, Functions
+    * **Week 1:** [Intro to the Intro](http://j.mp/13JPRtg)
+    * **Week 2:** [Finding your way around -- intro to literals, operators, variables and expressions feat. the PHP Manual](http://j.mp/YcyH7b)
+    * **Weeks 3-6:** Primitives, Literals, Variables, Operators, Control Structures, Functions
     * **Weeks 7-8:** Basic Object-Oriented Programming
     * **Weeks 9:** Welcome to the Coding Dojo!
     * **Weeks 10-15:** Advanced Techniques, Coding Dojos
