Adding more presentation links...

--- a/index.haml
+++ b/index.haml
@@ -111,7 +111,9 @@
     * **Week 1:** [Intro to the Intro](http://j.mp/13JPRtg)
     * **Week 2:** [Finding your way around...](http://j.mp/YcyH7b) -- Intro to Literals, Operators, Variables and Expressions feat. the PHP Manual
     * **Week 3:** [Expressing yourself... Politely.](http://j.mp/10Qd0KY) -- More about Expressions, Statements, and Code Organization
-    * **Weeks 4-6:** Primitives, Literals, Variables, Operators, Control Structures, Functions
+    * **Week 4:** BREAK
+    * **Week 5:** [Who's in control here?](http://j.mp/VkEVkQ) -- Introduction to control structures and diagraming with `if-else`
+    * **Week 6:** [Walk around in circles](http://j.mp/12QxKTB) -- More on control structures with loops and arrays
     * **Weeks 7-8:** Basic Object-Oriented Programming
     * **Weeks 9:** Welcome to the Coding Dojo!
     * **Weeks 10-15:** Advanced Techniques, Coding Dojos
